[package]
name = "starknet-tx-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0"
rocket_contrib = "0.4.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
starknet = "0.5.0"
url = "2.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.3", features = ["v4"] }
async-trait = "0.1"
futures = "0.3"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
